--- a/worlds/outer_wilds/shared_static_logic/locations.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/locations.jsonc
@@ -528,15 +528,15 @@
     },
     {
         "creation_settings": [ "logsanity" ], "address": 1085039026, "name": "ET Ship Log: Anglerfish Fossil 1 - Children's Game",
-        "region": "Hourglass Twins", "requires": [ { "item": "Translator" }, { "item": "Spacesuit" } ]
+        "region": "Hourglass Twins", "requires": [ { "item": "Translator" }, { "item": "Scout" }, { "item": "Spacesuit" } ]
     },
     {
         "creation_settings": [ "logsanity" ], "address": 1085039027, "name": "ET Ship Log: Anglerfish Fossil 2 - Blindfold Rule",
-        "region": "Hourglass Twins", "requires": [ { "item": "Translator" }, { "item": "Spacesuit" } ]
+        "region": "Hourglass Twins", "requires": [ { "item": "Translator" }, { "item": "Scout" }, { "item": "Spacesuit" } ]
     },
     {
         "creation_settings": [ "logsanity" ], "address": 1085039028, "name": "ET Ship Log: Anglerfish Fossil 3 - Adult Response",
-        "region": "Hourglass Twins", "requires": [ { "item": "Translator" }, { "item": "Spacesuit" } ]
+        "region": "Hourglass Twins", "requires": [ { "item": "Translator" }, { "item": "Scout" }, { "item": "Spacesuit" } ]
     },
     {
         "creation_settings": [ "logsanity" ], "address": 1085039029, "name": "ET Ship Log: Quantum Caves 1 - Wandering Rock",
