failed to fully comment out spacesuit, useful and trap

--- a/worlds/outer_wilds/shared_static_logic/connections.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/connections.jsonc
@@ -92,8 +92,8 @@
         { "item": "Escape Pod 3 Signal" }
     ] },
     { "from": "Dark Bramble - Nomai Grave", "to": "Dark Bramble - The Vessel", "requires": [
-        { "item": "Scout" }, // to launch into the DB seed at Nomai Grave
-        { "item": "Spacesuit" } // to enter the Vessel
+        { "item": "Scout" }//, // to launch into the DB seed at Nomai Grave
+        //{ "item": "Spacesuit" } // to enter the Vessel
     ] },
 
     // these will become dynamic after we implement warp pad randomization
