--- a/worlds/outer_wilds/shared_static_logic/items.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/items.jsonc
@@ -44,14 +44,14 @@
     { "code": null, "name": "Victory - Song of Five", "type": "progression" },
     { "code": null, "name": "Victory - Song of Six", "type": "progression" },
 
-//    { "code": 1734473716, "name": "Autopilot", "type": "useful" },
-//    { "code": 1734473717, "name": "Landing Camera", "type": "useful" },
-//    { "code": 1734473718, "name": "Eject Button", "type": "useful" },
-//    { "code": 1734473719, "name": "Velocity Matcher", "type": "useful" },
-//    { "code": 1734473720, "name": "Surface Integrity Scanner", "type": "useful" },
-//    { "code": 1734473729, "name": "Oxygen Capacity Upgrade", "type": "useful" },
-//    { "code": 1734473730, "name": "Fuel Capacity Upgrade", "type": "useful" },
-//    { "code": 1734473731, "name": "Boost Duration Upgrade", "type": "useful" },
+    { "code": 1734473716, "name": "Autopilot", "type": "useful" },
+    { "code": 1734473717, "name": "Landing Camera", "type": "useful" },
+    { "code": 1734473718, "name": "Eject Button", "type": "useful" },
+    { "code": 1734473719, "name": "Velocity Matcher", "type": "useful" },
+    { "code": 1734473720, "name": "Surface Integrity Scanner", "type": "useful" },
+    { "code": 1734473729, "name": "Oxygen Capacity Upgrade", "type": "useful" },
+    { "code": 1734473730, "name": "Fuel Capacity Upgrade", "type": "useful" },
+    { "code": 1734473731, "name": "Boost Duration Upgrade", "type": "useful" },
 
     { "code": 1734473721, "name": "Oxygen Refill", "type": "filler" },
     { "code": 1734473722, "name": "Jetpack Fuel Refill", "type": "filler" },
@@ -59,7 +59,7 @@
     { "code": 1734473724, "name": "Perfect Marshmallow", "type": "filler" },
     { "code": 1734473725, "name": "Burnt Marshmallow", "type": "filler" },
 
-//    { "code": 1734473726, "name": "Ship Damage Trap", "type": "trap" },
-//    { "code": 1734473727, "name": "Audio Trap", "type": "trap" },
-//    { "code": 1734473728, "name": "Nap Trap", "type": "trap" }
+    { "code": 1734473726, "name": "Ship Damage Trap", "type": "trap" },
+    { "code": 1734473727, "name": "Audio Trap", "type": "trap" },
+    { "code": 1734473728, "name": "Nap Trap", "type": "trap" }
 ]
